--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
     <input class="submit-btn" type="submit" value="Submit">
   </form>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0V22PDE784"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-0V22PDE784');
+  </script>
+
   <script>
     // JavaScript goes here
     function initial() {
@@ -72,6 +82,7 @@
       const adnVersion = formData.get('adnVersions');
 
       console.log({ agent, adnVersion });
+      gtag('event', 'testing_event', { value: "testing" });
 
       // gtag('event', 'adnVersion', {
       //   value: adnVersion,
