--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     gtag('config', 'G-0V22PDE784');
   </script>
-
   <title>GA4 Playground!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: Arial, Helvetica, sans-serif;
